--- a/locsic/style.css
+++ b/locsic/style.css
@@ -15,6 +15,9 @@ body {
 .name-container {
   position: absolute;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   padding: 2rem;
   width: 100%;
   height: 100%;
@@ -23,6 +26,20 @@ body {
   /* transform: rotate(-30deg); */
   font-size: 2rem;
   color: antiquewhite;
+}
+.file {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+label {
+  color: antiquewhite;
+  font-weight: 500;
+  position: relative;
+  z-index: 2;
+  margin-top: 0.7rem;
 }
 .music-container {
   display: flex;
@@ -37,6 +54,7 @@ body {
   color: white;
   width: 300px;
   height: 550px;
+  margin-top: 3rem;
 }
 
 .music-container {
@@ -47,7 +65,7 @@ body {
   /* border: 1px solid rgba(255, 255, 255, 0.3); */
 }
 .upper-container {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,10 +80,11 @@ body {
   width: 15rem;
   height: 15rem;
   margin-bottom: 1rem;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
 .image-container img {
-  border-radius: 1rem;
   object-fit: cover;
   height: inherit;
   width: inherit;
@@ -102,6 +121,13 @@ body {
 }
 .progress {
   width: 90%;
+}
+.time {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.7rem;
+  padding: 0.6rem 0.7rem;
 }
 .action-btn-container {
   margin-bottom: 1rem;
@@ -181,12 +207,6 @@ body {
   border-radius: inherit;
 }
 
-::-ms-fill-lower {
-  background-color: white;
-  height: 5px;
-  border: 0;
-  border-radius: inherit;
-}
 .util-btns {
   display: flex;
   align-items: center;
@@ -202,6 +222,8 @@ body {
     "image progress-container progress-container"
     "list list list";
   column-gap: 1rem;
+  place-items: center;
+  width: 100%;
 }
 .upper-container.list {
   display: grid;
@@ -244,6 +266,7 @@ body {
   width: 5rem;
   height: 5rem;
   grid-area: image;
+  border-radius: 0.5rem;
 }
 .list .song-info {
   grid-area: info;
@@ -259,6 +282,10 @@ body {
 .list .progress-container {
   grid-area: progress-container;
 }
+.list .time {
+  font-size: 0.6rem;
+  padding: 0.3rem 0.6rem;
+}
 .list .song-list-container {
   display: grid;
   overflow: hidden;
@@ -271,7 +298,4 @@ body {
 
 /* Media queries */
 @media only screen and (max-width: 600px) {
-  .name-container {
-    justify-content: center;
-  }
 }
