--- a/locsic/style.css
+++ b/locsic/style.css
@@ -23,7 +23,6 @@ body {
   height: 100%;
 }
 .name {
-  /* transform: rotate(-30deg); */
   font-size: 2rem;
   color: antiquewhite;
 }
@@ -41,45 +40,59 @@ label {
   z-index: 2;
   margin-top: 0.7rem;
 }
+
 .music-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  background-color: white;
   z-index: 10;
-  padding: 1.5rem 1rem;
   border-radius: 1rem;
   color: white;
   width: 300px;
   height: 550px;
   margin-top: 3rem;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  overflow: hidden;
 }
 
-.music-container {
-  background: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  /* border: 1px solid rgba(255, 255, 255, 0.3); */
+.bgimage {
+  position: absolute;
+  background-image: url("cover/vagrant.jpg");
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: blur(3rem);
+  -webkit-filter: blur(3rem);
+  height: 100%;
+  width: 100%;
+}
+.upper-container,
+.lower-container {
+  z-index: 10;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 1.2rem 1rem;
 }
 .upper-container {
-  /* width: 100%; */
   display: flex;
   flex-direction: column;
-  align-items: center;
   flex: 1;
   overflow: hidden;
 }
-.lower-container {
+.player {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .image-container {
   position: relative;
   width: 15rem;
   height: 15rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.6rem;
   border-radius: 1rem;
   overflow: hidden;
 }
@@ -103,6 +116,7 @@ label {
   font-size: 1.3em;
   font-weight: 600;
   margin: 0.5rem 0;
+  padding: 0 0.5rem;
   text-transform: capitalize;
   width: 100%;
   overflow: hidden;
@@ -120,7 +134,7 @@ label {
   place-items: center;
 }
 .progress {
-  width: 90%;
+  width: 95%;
 }
 .time {
   width: 100%;
@@ -161,6 +175,7 @@ label {
   align-items: center;
   justify-content: space-evenly;
   margin-bottom: 2rem;
+  position: relative;
 }
 
 .volume,
@@ -193,12 +208,12 @@ label {
   border: 0;
   background-color: white;
   cursor: pointer;
+  /* visibility: hidden; */
 }
+
 ::-webkit-slider-runnable-track {
   width: 100%;
-  height: 5px;
   border-radius: 12px;
-  background: rgba(255, 255, 255, 0.262);
 }
 ::-moz-range-progress {
   background-color: white;
@@ -222,7 +237,7 @@ label {
     "image progress-container progress-container"
     "list list list";
   column-gap: 1rem;
-  place-items: center;
+  place-items: start;
   width: 100%;
 }
 .upper-container.list {
@@ -271,9 +286,14 @@ label {
 .list .song-info {
   grid-area: info;
   text-align: left;
+  margin: 0;
+  width: 100%;
 }
 .list .title {
   font-size: 1em;
+  padding: 0;
+  margin-top: 0;
+  width: 170px;
 }
 .list .sub-title {
   font-size: 0.7em;
@@ -281,6 +301,7 @@ label {
 }
 .list .progress-container {
   grid-area: progress-container;
+  margin-bottom: 0;
 }
 .list .time {
   font-size: 0.6rem;
